force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__Allow_AutoCreated_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>npe4__Allow_AutoCreated_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts. Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</description>
    <inlineHelpText>Se eliminan los duplicados de relaciones creadas automáticamente para evitar la creación de registros duplicados entre contactos. Al seleccionarse desactiva este comportamiento y permite la creación de múltiples relaciones del mismo tipo entre contactos.</inlineHelpText>
    <label>Allow Auto-Created Duplicate Relations</label>
    <type>Checkbox</type>
</CustomField>