force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__Gender_Field__c.field-meta.xml
<CustomField>
    <fullName>npe4__Gender_Field__c</fullName>
    <description>The custom field used to define the gender of a Contact for determining reciprocal relationships</description>
    <inlineHelpText>Campo personalizado empleado para definir el género del contacto que se utiliza para determinar relaciones reciprocas.</inlineHelpText>
    <label>Gender Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>