force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__Reciprocal_Method__c.field-meta.xml
<CustomField>
    <fullName>npe4__Reciprocal_Method__c</fullName>
    <description>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender (see Reciprocal Relationships tab), or Value Inversion, which inverts the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</description>
    <inlineHelpText>Método a usar para generar relaciones reciprocas. Ya sea Configuración de lista que emplea la configuración personalizada por género (ver Relaciones recíprocas), o Inversión de valores, que invierte el tipo si es apropiado (&quot;Padre-Hijo&quot; a &quot;Hijo-Padre&quot;)</inlineHelpText>
    <label>Reciprocal Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>