force-app/main/default/objects/npe4__Relationship_Settings__c/fields/npe4__Relationship_Name_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>npe4__Relationship_Name_Field_Id__c</fullName>
    <description>The ID of the Name field that is dynamically generated in this org, can be found via source view when creating a new Relationship or in the URL when using the &apos;New Relationships&apos; button.  Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer</description>
    <inlineHelpText>Al rellenar este valor permite que el campo se cumplimente automáticamente cuando se crean nuevas relaciones desde el Visor de relaciones (vea la descripción para obtener más información).</inlineHelpText>
    <label>Relationship Name Field Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>